Обновлен класс Position и PositionRepository: добавлен суррогатный первичный ключ, уникальность позиций определяется составным ключом (pos_id, c_time). Обновлен метод сохранения и удаления позиций, изменены уровни логирования в application.properties.